Added oculus tooltips

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "snazzy": "^4.0.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
+  },
+  "dependencies": {
+    "aframe-tooltip-component": "^0.1.0"
   }
 }
