Line and stamps shared materials and vertex colors

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "devDependencies": {
     "cross-env": "^2.0.1",
+    "json-loader": "^0.5.7",
     "semistandard": "^9.0.0",
     "snazzy": "^4.0.1",
+    "spritesheet-js": "^1.2.6",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
